--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^26.0.0",
     "prop-types": "^15.6.1",
     "react": "16.3.0",
-    "react-native": "^0.54.4"
+    "react-native": "^0.54.4",
+    "react-native-swiper": "^1.5.13"
   }
 }
