--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^26.0.0",
+    "native-base": "^2.4.3",
     "prop-types": "^15.6.1",
     "react": "16.3.0",
     "react-native": "^0.54.4",
