--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.6.1",
     "react": "16.3.0",
     "react-native": "^0.54.4",
+    "react-native-slider": "^0.11.0",
     "react-native-swiper": "^1.5.13"
   }
 }
