--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "art": "^0.10.2",
     "d3": "^5.2.0",
     "d3-shape": "^1.2.0",
@@ -29,6 +30,7 @@
     "react-native": "^0.54.4",
     "react-native-elements": "^0.19.1",
     "react-native-slider": "^0.11.0",
-    "react-native-swiper": "^1.5.13"
+    "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^4.6.0"
   }
 }
