--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prop-types": "^15.6.1",
     "react": "16.3.0",
     "react-native": "^0.54.4",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.0.0-beta",
     "react-native-slider": "^0.11.0",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0"
