--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-elements": "^1.0.0-beta",
     "react-native-slider": "^0.11.0",
     "react-native-swiper": "^1.5.13",
-    "react-native-vector-icons": "^4.6.0"
+    "react-native-vector-icons": "^4.6.0",
+    "react-router-native": "^4.2.0"
   }
 }
