--- a/rn-lab/package.json
+++ b/rn-lab/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.6.1",
     "react": "16.3.0",
     "react-native": "^0.54.4",
+    "react-native-chart-kit": "^0.1.5",
     "react-native-elements": "^1.0.0-beta",
     "react-native-slider": "^0.11.0",
     "react-native-swiper": "^1.5.13",
