--- a/rn-lab-expo/package.json
+++ b/rn-lab-expo/package.json
@@ -2,11 +2,14 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "d3-shape": "^1.2.0",
     "expo": "^27.0.1",
+    "native-base": "^2.5.1",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-base": "^1.1.0",
     "react-native-elements": "^1.0.0-beta"
   }
 }
