--- a/rn-lab-expo/package.json
+++ b/rn-lab-expo/package.json
@@ -10,6 +10,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-base": "^1.1.0",
-    "react-native-elements": "^1.0.0-beta"
+    "react-native-elements": "^1.0.0-beta",
+    "react-native-router-flux": "^4.0.0-beta.31"
   }
 }
